# Nexora

./: .gitignore  CLAUDE.md  Cargo.toml  DOC.md  LICENSE  Notes.md  README.md  bench.sh  test.nex
.claude/: settings.local.json
.github/workflows/: bench.yml  ci.yml
benches/: graph_bench.rs
src/: lib.rs  main.rs
src/api/traversal/: api.rs  mod.rs  tests.rs  traversal.rs
src/buffer_pool/: constants.rs  mod.rs  models.rs  tests.rs
src/graph/: mod.rs  models.rs
src/graph/edge/: constants.rs  error.rs  graph_edge_store.rs  mod.rs  page.rs  tests.rs
src/graph/graphstore/: error.rs  graphstore.rs  mod.rs  tests.rs
src/graph/label/: constants.rs  error.rs  graph_label_store.rs  mod.rs  page.rs  tests.rs
src/graph/node/: constants.rs  error.rs  graph_node_store.rs  mod.rs  page.rs  tests.rs
src/graph/property/: constants.rs  error.rs  graph_property_store.rs  mod.rs  page.rs  tests.rs
src/graph/record/: types.rs
src/graph/string/: constants.rs  error.rs  graph_string_store.rs  label_string_store.rs  mod.rs  page.rs  tests.rs
src/index/: mod.rs
src/index/page_index/: constants.rs  mod.rs  node_page_index_store.rs  page.rs  tests.rs
src/lua/: graph_store.rs  mod.rs  repl.rs  tests.rs
src/storage/: constants.rs  error.rs  mod.rs  models.rs  page_store.rs  page_store_disk.rs  page_store_mmap.rs  storage_manager.rs  tests.rs
src/storage/wal/: mod.rs  models.rs  tests.rs
src/utils/containers/: bitsets.rs  mod.rs
