[package]
name = "nexora"
version = "0.1.0"
edition = "2024"

[dependencies]
zerocopy = { version = "0.8", features = ["derive"] }
thiserror = "2"
crc32fast = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }
rustyline = { version = "14", optional = true }
clap = { version = "~4.5", features = ["derive", "color"], optional = true }

[features]
lua = ["dep:mlua", "dep:rustyline", "dep:clap"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_bench"
harness = false

[[bin]]
name = "nexora"
path = "src/main.rs"
required-features = ["lua"]
